# soljar

./: Anchor.toml
.github/: radar.yml
programs/soljar/: Cargo.toml
programs/soljar/src/: constants.rs  error.rs  lib.rs  utils.rs
programs/soljar/src/instructions/: add_supporter.rs  create_deposit.rs  create_deposit_index.rs  create_indexes.rs  create_spl_deposit.rs  create_supporter_index.rs  create_tip_link.rs  create_user.rs  create_withdrawl.rs  init_indexes.rs  init_platform.rs  init_tip_link.rs  init_treasury.rs  mod.rs  transfer_tokens.rs  withdraw_spl_tokens.rs  withdraw_tokens.rs
programs/soljar/src/state/: deposit.rs  deposit_index.rs  index.rs  jar.rs  meta.rs  meta_index.rs  mod.rs  platform.rs  supporter.rs  supporter_index.rs  tip_link.rs  tip_link_index.rs  treasury.rs  user.rs  user_by_name.rs  user_info.rs  withdrawl.rs  withdrawl_index.rs
src/: index.ts  soljar-exports.ts
tests/: soljar.spec.ts
tests/specs/: deposit.create.spec.ts  platform.init.spec.ts  stress.spec.ts  user.create.spec.ts  withdrawl.create.spec.ts
tests/utils/: helpers.ts  initialize.ts  setup.ts
